add topics and events integration
